[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/white_square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 18 )

[sub_resource type="CircleShape2D" id=3]
radius = 87.023

[node name="Enemy" type="KinematicBody2D" groups=["mob"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 2 )
region_rect = Rect2( 10, 60, 10, 10 )

[node name="EnvironmentCollisionArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HazzardArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazzardArea"]
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.0

[node name="PathfindingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageAura" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAura"]
shape = SubResource( 3 )

[connection signal="body_entered" from="HazzardArea" to="." method="_on_HazzardArea_body_entered"]
[connection signal="area_entered" from="DamageAura" to="." method="_on_DamageAura_area_entered"]
[connection signal="area_exited" from="DamageAura" to="." method="_on_DamageAura_area_exited"]
